--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dist-delete",
+  "name": "node-script",
   "version": "1.0.0",
   "description": "node scripts",
   "main": "index.js",
